@@ -1,22 +1,17 @@
 package at.fhtw.swen2.tutorial.presentation.viewmodel;
 
 import at.fhtw.swen2.tutorial.model.Tour;
-import at.fhtw.swen2.tutorial.model.TourLog;
 import at.fhtw.swen2.tutorial.service.TourService;
-import at.fhtw.swen2.tutorial.service.impl.TourServiceImpl;
 import javafx.beans.property.*;
 import javafx.collections.FXCollections;
 import javafx.collections.ObservableList;
 import javafx.concurrent.Task;
-import lombok.AccessLevel;
 import lombok.Getter;
 import lombok.Setter;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
 import java.util.LinkedList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 
 @Component
@@ -24,12 +19,10 @@ import java.util.stream.Collectors;
 @Setter
 public class TourListViewModel {
     private final ObservableList<Tour> tourListItems = FXCollections.observableArrayList();
-
     private LinkedList<Tour> masterItems = new LinkedList<>();
     private final ObjectProperty<Tour> selectedTour = new SimpleObjectProperty<>();
 
     private final TourLogListViewModel tourLogListViewModel;
-
     private final DetailTourViewModel detailTourViewModel;
 
     private final TourService tourService;
@@ -83,14 +76,12 @@ public class TourListViewModel {
 
 
     public void filterList(String searchText) {
-
         Task<List<Tour>> task = new Task<>() {
             @Override
-            protected List<Tour> call() throws Exception {
+            protected List<Tour> call() {
                 updateMessage("Loading data");
 
-                return masterItems
-                        .stream()
+                return masterItems.stream()
                         .filter(value -> value.getName().toLowerCase().contains(searchText.toLowerCase())
                                 || value.getTo().toLowerCase().contains(searchText.toLowerCase())
                                 || value.getFrom().toLowerCase().contains(searchText.toLowerCase())
@@ -98,21 +89,14 @@ public class TourListViewModel {
                                 || value.getTransportType().toLowerCase().contains(searchText.toLowerCase())
                                 || value.getEstimatedTime().toString().contains(searchText.toLowerCase())
                                 || value.getDistance().toString().contains(searchText.toLowerCase())
-
-                        ).collect(Collectors.toList());
+                        ).toList();
             }
         };
 
-        System.out.println(task.getValue());
-        task.setOnSucceeded(event -> {
-            tourListItems.setAll(task.getValue());
-        });
+        task.setOnSucceeded(event -> tourListItems.setAll(task.getValue()));
 
         Thread th = new Thread(task);
         th.setDaemon(true);
         th.start();
-
     }
-
-
 }
