@@ -1,11 +1,7 @@
 package at.fhtw.swen2.tutorial.presentation.viewmodel;
 
-import at.fhtw.swen2.tutorial.model.Tour;
 import at.fhtw.swen2.tutorial.model.TourLog;
 import at.fhtw.swen2.tutorial.service.TourLogService;
-import at.fhtw.swen2.tutorial.service.TourService;
-import at.fhtw.swen2.tutorial.service.impl.TourLogServiceImpl;
-import at.fhtw.swen2.tutorial.service.impl.TourServiceImpl;
 import javafx.beans.property.ObjectProperty;
 import javafx.beans.property.SimpleObjectProperty;
 import javafx.collections.FXCollections;
@@ -13,13 +9,10 @@ import javafx.collections.ObservableList;
 import javafx.concurrent.Task;
 import lombok.Getter;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
-import java.util.ArrayList;
 import java.util.LinkedList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 @Slf4j
@@ -27,7 +20,7 @@ import java.util.stream.Collectors;
 public class TourLogListViewModel {
     private final ObservableList<TourLog> tourLogListItems = FXCollections.observableArrayList();
     private final ObjectProperty<TourLog> selectedTourLog = new SimpleObjectProperty<>();
-    private List<TourLog> tourLogItems = new LinkedList<>();//master Data
+    private List<TourLog> tourLogItems = new LinkedList<>(); //master Data
     private final TourLogService tourLogService;
 
     public TourLogListViewModel(TourLogService tourLogService) {
@@ -66,13 +59,9 @@ public class TourLogListViewModel {
 
     public void initList() {
         // TODO: this is only temporal to display some data for now this should be deleted since no element is selected at start
-
-
         if (!tourLogListItems.isEmpty())
             tourLogService.findAllTourLogsByTourId(tourLogListItems.get(0).getId()).forEach(this::addItem);
 
-        System.out.println(tourLogListItems.size());
-        System.out.println(tourLogListItems);
         log.info(String.valueOf(tourLogListItems.size()));
     }
 
@@ -81,49 +70,31 @@ public class TourLogListViewModel {
         tourLogItems.remove(selectedTourLog.get());
         tourLogListItems.add(tourLog);
         tourLogItems.add(tourLog);
-        System.out.println(tourLogListItems);
         selectedTourLog.set(tourLog);
     }
 
     public void filterList(String searchText) {
-        System.out.println(searchText);
-        System.out.println(getTourLogListItems().size());
-
-
+        log.info("Filtering list with search text: " + searchText);
         Task<List<TourLog>> task = new Task<>() {
             @Override
-            protected List<TourLog> call() throws Exception {
+            protected List<TourLog> call() {
                 updateMessage("Loading data");
 
-                System.out.println(tourLogListItems);
-
-                return tourLogItems
-                        .stream()
+                return tourLogItems.stream()
                         .filter(value -> value.getComment().toLowerCase().contains(searchText.toLowerCase())
                                 || value.getDifficulty().toLowerCase().contains(searchText.toLowerCase())
                                 || value.getRating().toString().contains(searchText.toLowerCase())
                                 || value.getDate().contains(searchText.toLowerCase())
                                 || value.getId().toString().contains(searchText.toLowerCase())
                                 || value.getTotalTime().toString().contains(searchText.toLowerCase())
-
-                        )
-                        .collect(Collectors.toList());
+                        ).toList();
             }
         };
 
-        //TODO: fix getDuration -> man bekommt null von der DB zurück
-
-        System.out.println(task.getValue());
-
-        task.setOnSucceeded(event -> {
-            tourLogListItems.setAll(task.getValue());
-        });
+        task.setOnSucceeded(event -> tourLogListItems.setAll(task.getValue()));
 
         Thread th = new Thread(task);
         th.setDaemon(true);
         th.start();
-
     }
-
-
 }
